// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentWeatherBasicLocationInfo Given Language: ar, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      فروتزواف
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: be, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Уроцлаў
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: bg, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Вроцлав
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: cs, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vratislav
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: de, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Breslau
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: en, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: eo, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vroclavo
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: es, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Breslavia
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: fr, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vratislavie
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: he, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      ורוצלב
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: hu, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Boroszló
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: it, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Breslavia
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: ja, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      ヴロツワフ
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: la, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wratislavia
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: lt, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vroclavas
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: lv, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vroclava
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: mk, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Вроцлав
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: pl, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: pt, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Breslávia
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: ru, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Вроцлав
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: sk, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Vroclav
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: sr, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Вроцлав
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: uk, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Вроцлав
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: yi, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      ברעסלוי
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given Language: zh, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      弗罗茨瓦夫
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given UnitType: imperial, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °F
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given UnitType: metric, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      °C
    </Text>
  </View>
</View>
`;

exports[`CurrentWeatherBasicLocationInfo Given UnitType: standard, then it will match snapshot 1`] = `
<View
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      },
    ]
  }
>
  <Image
    source={
      {
        "uri": "https://openweathermap.org/img/wn/01d@2x.png",
      }
    }
    style={
      {
        "aspectRatio": 1,
        "height": "100%",
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 20,
        }
      }
    >
      Wrocław
    </Text>
    <Text>
      clear sky
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignSelf": "center",
        },
        {
          "alignItems": "center",
          "aspectRatio": 2.5,
          "backgroundColor": "cyan",
          "justifyContent": "center",
        },
        {
          "borderRadius": 20,
          "height": 40,
          "padding": 10,
        },
      ]
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "fontSize": 20,
          "lineHeight": 20,
        }
      }
    >
      17.1
      K
    </Text>
  </View>
</View>
`;
